gcc/testsuite/rust/rustc/ui/rfc-1937-termination-trait/termination-trait-impl-trait.rs
// Tests that an `impl Trait` that is not `impl Termination` will not work.
fn main() -> impl Copy { }
// { dg-error ".E0277." "" { target *-*-* } .-1 }

